vendor/formats-der-v0.7.8/tls_codec/derive/tests/attributes/that_skip_attribute_does_not_compile_on_enums.rs
use tls_codec_derive::{TlsDeserialize, TlsSerialize, TlsSize};

#[derive(TlsDeserialize, TlsSerialize, TlsSize)]
#[repr(u8)]
enum EnumWithSkip {
    #[tls_codec(skip)]
    A,
    B,
}

fn main() {}
